<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ksp.nudge.MessageFormActivity" >

    <TextView
        android:id="@+id/whoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_instruction"/>
    
    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/selectContactBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/select_contact" />

        <EditText
            android:id="@+id/contactNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/selectContactBtn"
            android:inputType="phone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/whenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/when_instruction" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/whatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_instruction" />

    <EditText
        android:id="@+id/msgText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" />

    <RadioGroup
        android:id="@+id/FrequencyGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/RadioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_once"/>
        
        <RadioButton
            android:id="@+id/RadioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_daily" />

        <RadioButton
            android:id="@+id/RadioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_weekly" />

        <RadioButton
            android:id="@+id/RadioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frequency_monthly" />
    </RadioGroup>

</TableLayout>